prost-reflect/tests/snapshots/main__enum_reserved_range_overlap_with_value3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "enum number '5' conflicts with reserved range '5 to 5'"
related: []
severity: error

