prost-reflect/tests/snapshots/main__extend_field_number_not_in_extensions2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "message 'Message' does not define '1' as an extension number"
related:
  - causes: []
    labels: []
    message: "message 'Message' does not define '6' as an extension number"
    related: []
    severity: error
severity: error

