prost-reflect/tests/snapshots/main__field_default_invalid_type1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "invalid default value '1' for type 'Foo'"
related: []
severity: error

