prost-reflect/tests/snapshots/main__field_default_invalid_type2.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "invalid default value '\"ZERO\"' for type 'Foo'"
related: []
severity: error

