prost-reflect/tests/snapshots/main__field_default_invalid_type3.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "invalid default value 'FALSE' for type 'Foo'"
related: []
severity: error

