prost-reflect/tests/snapshots/main__field_default_value1.snap
---
source: prost-reflect/tests/main.rs
expression: actual
---
causes: []
labels: []
message: "invalid default value '\"\"' for type 'message type'"
related: []
severity: error

